--- a/ligapro_manager/templates/league_detail.html
+++ b/ligapro_manager/templates/league_detail.html
@@ -516,7 +516,7 @@
                     <thead>
                         <tr>
                             <th class="p-2 border border-white/10 bg-white/5 sticky left-0 z-10 w-40"></th>
-                            {% for team in teams %}
+                            {% for team in scheduling_teams %}
                             <th class="p-2 border border-white/10 bg-white/5 text-center min-w-[120px]">
                                 <div class="flex flex-col items-center">
                                     {% if team.shield_url %}
