--- a/ligapro_manager/templates/share_modal_fragment.html
+++ b/ligapro_manager/templates/share_modal_fragment.html
@@ -5,7 +5,7 @@
             <i class="fas fa-times"></i>
         </button>
 
-        <form action="{{ url_for('league.generate_share_report', league_id=league.id) }}" method="POST" target="_blank"
+        <form action="{{ url_for('league.generate_share_report', league_id=league.id) }}" method="GET" target="_blank"
             class="p-6">
             <h3 class="text-xl font-bold mb-6 flex items-center gap-2">
                 <i class="fas fa-file-export text-blue-400"></i> Generar Reporte
